fix: fix css spacing for search mobile view

--- a/frontend/src/styles/SearchPage.scss
+++ b/frontend/src/styles/SearchPage.scss
@@ -121,20 +121,18 @@ $text-dark: #ffffff;
           .letter-header {
             font-size: 1.5rem;
             font-weight: 600;
-            margin-top: 2rem;
+            margin-top: 0.5rem;
             margin-bottom: 1rem;
             display: flex;
-            align-items: center;
             gap: 0.5rem;
 
           }
 
           .alphabetical-index {
             position: sticky;
-            top: 100px;
+            /*top: 100px;*/
             display: flex;
-            /*gap: 0.25rem;*/
-            padding: 0.5rem;
+
             max-height: calc(100vh - 120px);
             overflow-y: auto;
             user-select: none;
